# SMT_OS

./: .env.example  .env.local  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/skills/: skill-rules.json
.claude/skills/cliwant-brand-guidelines/: SKILL.md
.claude/skills/cliwant-brand-guidelines/references/: brand_guidelines.md  color_guide.md  logo_guidelines.md
.claude/skills/domain-router/: skill.md
.claude/skills/english-syntax-analyzer/: SKILL.md
.claude/skills/english-syntax-analyzer/resources/: examples.md  (+3 more)
.claude/skills/fastapi-backend-guidelines/: README.md  skill.md
.claude/skills/kr-private-education/: skill.md
.claude/skills/nextjs-frontend-guidelines/: README.md  skill.md
.claude/skills/pptx/: package-lock.json
docs/: deploy-vercel-render.md  skills-usage.md  syntax-analysis-scientists-and-artists.md
src/smt_os/: config.py  main.py
supabase/migrations/: 202602280001_mvp1_schema.sql  202602280002_mvp1_rls.sql  202602280003_mvp1_seed.sql
tests/: test_event_flow.py
web/: .env.example  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/console/: page.tsx
web/app/favicon.ico/: route.ts
web/app/field/: page.tsx
web/app/leader/: page.tsx
web/app/login/: page.tsx
web/app/signup/: page.tsx
web/components/shared/: app-frame.tsx  hero.tsx  mobile-dock.tsx  workspace-shell.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  table.tsx  textarea.tsx
web/lib/: api.ts  auth.ts  brand.ts
(+63 files in other folders)
