[project]
name = "claude-code-harness"
version = "0.1.0"
description = "S.M.T DooDream OS API bootstrap (DDD + FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smt_os"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
